galley/pkg/config/analysis/analyzers/testdata/schema-validation.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ratings-bogus-weight
spec:
  hosts:
  - ratings
  http:
  - route:
    - destination:
        host: ratings
        subset: v1
      weight: 999 # This is an invalid weight value and should fail
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ratings-valid # Should not trigger any messages
spec:
  hosts:
  - ratings
  http:
  - route:
    - destination:
        host: ratings
        subset: v1
      weight: 100
---
